Solution, no input val

--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,6 +75,236 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "712f0147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    \"\"\"\n",
+    "    initialize_inventory that takes products as a parameter. \n",
+    "    Inside the function, implement the code for initializing the inventory dictionary using a loop and user input\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        quantity = input(f'Number of {product} available: ')\n",
+    "        while not quantity.isdigit():\n",
+    "            quantity = input(f'Number of {product} available, please type a digit: ')\n",
+    "        inventory[product] = int(quantity)\n",
+    "        #inventory.update({product:int(quantity)}) # alternative way to insert data in the dictionary\n",
+    "        print(f'Product {product} has {quantity} in stock')\n",
+    "    return inventory\n",
+    "\n",
+    "# list comprehension\n",
+    "def initialize_inventory_l(products:list):\n",
+    "    inventory = {product: int(input(f\"Enter the quantity of {product}s available: \")) for product in products}\n",
+    "    return inventory  \n",
+    "\n",
+    "def get_customer_orders(products):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for prompting the user to enter the product names using a loop.\n",
+    "    The function should return the customer_orders set.\n",
+    "    \"\"\"\n",
+    "    customer_orders = set() # create customer cart\n",
+    "    moreorders = True\n",
+    "    while moreorders:\n",
+    "        order = input('Enter the name of your product ')# ask for user input\n",
+    "        while order not in products: # input validation\n",
+    "            order = input(f'Please type a product in {products} ')# ask for user input\n",
+    "        customer_orders.add(order)\n",
+    "        tmp = input(\"Please type Yes or No. Want to order something else? Yype 'Yes' or 'No':\")\n",
+    "        while tmp !='Yes' and tmp != 'No':\n",
+    "            tmp = input(\"Please type Yes or No. Want to order something else? Yype 'Yes' or 'No': \")# ask for user input\n",
+    "        if tmp.capitalize().strip() == 'Yes':\n",
+    "            moreorders = True\n",
+    "        else:\n",
+    "            moreorders = False\n",
+    "    return customer_orders\n",
+    "\n",
+    "# cannot transform as is, changed to for with list comprehension\n",
+    "def get_customer_orders_l(products):\n",
+    "    number_orders = int(input(f\"Enter the number of customer orders: \"))\n",
+    "    while not number_orders.isdigit():\n",
+    "        number_orders = int(input(f\"Not a number. Enter the number of customer orders: \"))\n",
+    "        \n",
+    "    customer_orders = (input(f\"Enter the name of a product that a customer wants to order: \") for i in range(1,number_orders+1))\n",
+    "    \n",
+    "    return customer_orders\n",
+    "    \n",
+    "def update_inventory(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for updating the inventory dictionary based on the customer orders.\"\"\"\n",
+    "    inventory_local = inventory.copy()\n",
+    "    for product in customer_orders:\n",
+    "        inventory_local[product]-=1\n",
+    "    return inventory_local\n",
+    "\n",
+    "def update_inventory_using_global(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for updating the inventory dictionary based on the customer orders.\"\"\"\n",
+    "    for product in customer_orders:\n",
+    "        inventory[product]-=1\n",
+    "        \n",
+    "\n",
+    "# returns tuple total_purchase,order_percentual\n",
+    "def calculate_order_statistics(customer_orders:set,inventory:dict):\n",
+    "    \"\"\" Summary: Given the customer order and the inventory, calculate statistics such as total # of products and percentage of invetory taken\n",
+    "    Paramenters: set of products ordered by customer, dictionary inventory\n",
+    "    Return: Set with the products ordered by the customer\"\"\"\n",
+    "    total_purchase = len(customer_orders)\n",
+    "    quantity_of_products = sum(inventory.values())\n",
+    "    order_percentual = (total_purchase/quantity_of_products)*100\n",
+    "    statistics_tuple = (total_purchase,order_percentual)  \n",
+    "    return statistics_tuple\n",
+    "\n",
+    "def print_order_statistics(statistics_tuple):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for printing the order statistics.\n",
+    "    \"\"\"\n",
+    "    print(f'''Order Statistics:\n",
+    "Total Products Ordered: {statistics_tuple[0]}\n",
+    "Percentage of Products Ordered: {statistics_tuple[1]}% ''')\n",
+    "\n",
+    "def print_updated_inventory(inventory):\n",
+    "    \"\"\"Inside the function, implement the code for printing the updated inventory.\"\"\"\n",
+    "    print(f'The inventory after customer purchase is :{inventory}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "fcc06868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list comprehension, no input val\n",
+    "#def input_val(\"\"):\n",
+    "    \n",
+    "\n",
+    "def initialize_inventory_l(products:list):\n",
+    "    inventory = {product: int(input(f\"Enter the quantity of {product}s available: \")) for product in products}\n",
+    "    return inventory \n",
+    "\n",
+    "# problem here, no punit val\n",
+    "def get_customer_orders_l():\n",
+    "    number_orders = input(f\"Enter the number of customer orders: \")\n",
+    "    while not number_orders.isdigit():\n",
+    "        number_orders = input(f\"Not a number. Enter the number of customer orders: \")\n",
+    "    number_orders = int(number_orders)\n",
+    "    \n",
+    "    customer_orders = {input(\"Enter the name of a product that a customer wants to order: \") for i in range(1,number_orders+1)}\n",
+    "    return customer_orders\n",
+    "\n",
+    "def assign_price(customer_orders:list):\n",
+    "    sum_list = [int(input(f'Enter price of {product}: ')) for product in customer_orders]\n",
+    "    return sum(sum_list)\n",
+    "\n",
+    "def update_inventory_l(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for updating the inventory dictionary based on the customer orders.\"\"\"\n",
+    "    inventory_local = inventory.copy()\n",
+    "    #for product in customer_orders:\n",
+    "    #    inventory_local[product]-=1\n",
+    "    [inventory_local.update({product:inventory[product]-1}) for product in customer_orders]\n",
+    "    \n",
+    "    myinv = inventory_local.copy()\n",
+    "    [inventory_local.pop(product) for product,quantity in myinv.items() if quantity == 0]\n",
+    "    return inventory_local\n",
+    "\n",
+    "def calculate_order_statistics(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for calculating the order statistics \n",
+    "    (total products ordered, and percentage of unique products ordered). The function should return these values.\"\"\"\n",
+    "    total_products = len(customer_orders)\n",
+    "    percentage_unique_products = sum(inventory.values())\n",
+    "    return total_products,percentage_unique_products\n",
+    "\n",
+    "def print_order_statistics(statistics_tuple):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for printing the order statistics.\n",
+    "    \"\"\"\n",
+    "    print(f'''Order Statistics:\n",
+    "Total Products Ordered: {statistics_tuple[0]}\n",
+    "Percentage of Products Ordered: {statistics_tuple[1]}% ''')\n",
+    "    \n",
+    "def print_updated_inventory(inventory):\n",
+    "    \"\"\"Inside the function, implement the code for printing the updated inventory.\"\"\"\n",
+    "    print(f'The inventory after customer purchase is :{inventory}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "258f7151",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['book', 'mug', 't-shirt', 'hat', 'keychain']\n",
+      "Enter the quantity of books available: 2\n",
+      "Enter the quantity of mugs available: 2\n",
+      "Enter the quantity of t-shirts available: 2\n",
+      "Enter the quantity of hats available: 2\n",
+      "Enter the quantity of keychains available: 2\n",
+      "{'book': 2, 'mug': 2, 't-shirt': 2, 'hat': 2, 'keychain': 2}\n",
+      "Enter the number of customer orders: 1\n",
+      "Enter the name of a product that a customer wants to order: mug\n",
+      "Order Statistics:\n",
+      "Total Products Ordered: 1\n",
+      "Percentage of Products Ordered: 10% \n",
+      "The inventory after customer purchase is :{'book': 2, 'mug': 1, 't-shirt': 2, 'hat': 2, 'keychain': 2}\n",
+      "Enter price of mug: 10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "products = ['book','mug','t-shirt','hat','keychain']\n",
+    "print (products)\n",
+    "inventory = initialize_inventory_l(products)\n",
+    "print(inventory)\n",
+    "\n",
+    "mycustomer_order = get_customer_orders_l()\n",
+    "my_stats = calculate_order_statistics(mycustomer_order,inventory)\n",
+    "print_order_statistics(my_stats)\n",
+    "\n",
+    "inventory = update_inventory_l(mycustomer_order,inventory)\n",
+    "#print(mycustomer_order)\n",
+    "print_updated_inventory(inventory)\n",
+    "print(assign_price(mycustomer_order))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "910b588b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'f': 1, 'h': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydic = {'e':1,'f':1, 'h':2}\n",
+    "customer_order = ('e')\n",
+    "print (update_inventory_l(customer_order,mydic))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd3721b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -93,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
